test/errors/def_annotations.py.expected
test/errors/def_annotations.py:1 error: expected `,`, got `:`
